--- a/index.html
+++ b/index.html
@@ -1,9 +1,3 @@
-<<<<<<< HEAD
-<html>
-    <body>
-        <script src="/soma.js"></script>
-    </body>
-=======
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,7 +7,6 @@
     <title>aprendendo</title>
 </head>
 <body >
-    <h1> Eu Sou o miliior</h1>
+    <h1 style="text-align: center;">AMBIENTE STAGING</h1>
 </body>
->>>>>>> 37ab37ae141e2e68ee21666c36f773c3ac7ce5e4
 </html>
